test/files/neg/bug900.check
bug900.scala:4: error: type mismatch;
 found   : Foo.this.x.type (with underlying type Foo.this.bar)
 required: AnyRef
Note that implicit conversions are not applicable because they are ambiguous:
 both method orderingToOrdered in object Predef of type [T](x: T)(implicit ord: Ordering[T])Ordered[T]
 and method any2stringadd in object Predef of type (x: Any)scala.runtime.StringAdd
 are possible conversion functions from Foo.this.x.type to AnyRef
        def break(): x.type
                     ^
one error found
